# cmake-vcpkg-template

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: vcpkg_utilities.cmake
src/: CMakeLists.txt  hellofmt.cpp
